--- a/index.html
+++ b/index.html
@@ -2,39 +2,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>JorWrites – LinkedIn Ghostwriting</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>JorWrites – LinkedIn Ghostwriting</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f9f9f9;
+      color: #222;
+      padding: 2rem;
+    }
+    .container {
+      max-width: 700px;
+      margin: auto;
+      background: white;
+      padding: 2rem;
+      border-radius: 1rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+    }
+    h1, h2, h3 {
+      color: #111;
+    }
+    a {
+      color: #0066ee;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    ul {
+      padding-left: 1.25rem;
+    }
+    footer {
+      margin-top: 3rem;
+      font-size: 0.9rem;
+      color: #999;
+      text-align: center;
+    }
+    .btn {
+      display: inline-block;
+      margin: 0.5rem 0;
+      padding: 0.6rem 1.2rem;
+      background-color: #0066ee;
+      color: white;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .btn:hover {
+      background-color: #004bbb;
+    }
+  </style>
 </head>
-<body style="font-family:sans-serif;max-width:700px;margin:0 auto;padding:2rem;line-height:1.6;">
+<body>
+  <div class="container">
     <h1>JorWrites</h1>
-    <h2>LinkedIn Ghostwriting for Startup Founders</h2>
-    <p>Weekly posts in your voice — zero hassle, zero fluff.</p>
+    <h2>🚀 LinkedIn Ghostwriting for Startup Founders</h2>
+    <p>High-converting content in your voice. 100% hands-off.</p>
 
     <h3>💸 Pricing</h3>
     <ul>
-        <li><strong>$200/month</strong> – 4 posts</li>
-        <li><strong>$400/month</strong> – 8 posts</li>
+      <li><strong>$200/month</strong> – 4 ghostwritten posts</li>
+      <li><strong>$400/month</strong> – 8 ghostwritten posts</li>
     </ul>
 
-    <h3>📅 Book a Call</h3>
-    <p><a href="https://calendly.com/jor123" target="_blank">Schedule via Calendly</a></p>
+    <h3>📅 Book a Discovery Call</h3>
+    <a class="btn" href="https://calendly.com/jor123" target="_blank">Schedule on Calendly</a>
 
-    <h3>💳 Make a Payment</h3>
-    <p><a href="https://paypal.me/jordanmcginnis899" target="_blank">Pay via PayPal</a></p>
+    <h3>💳 Ready to Start?</h3>
+    <a class="btn" href="https://paypal.me/jordanmcginnis899" target="_blank">Make Payment</a>
 
     <h3>📥 Client Intake Form</h3>
-    <p><a href="https://tally.so/r/wgZoLm" target="_blank">Fill the Form</a></p>
+    <a class="btn" href="https://tally.so/r/wgZoLm" target="_blank">Fill Out Now</a>
 
     <h3>💬 Testimonials</h3>
     <ul>
-        <li>“Saved me 6 hours a week. My posts finally sound like me again.” – Founder, SaaS</li>
-        <li>“Closed a $4K deal from one post.” – Consultant, AI</li>
-        <li>“Only outsourced content I’ve never had to rewrite.” – Startup Coach</li>
+      <li>"Saved me 6 hours a week. My posts finally sound like me again." – SaaS Founder</li>
+      <li>"Closed a $4K client off a single post." – AI Consultant</li>
+      <li>"Only ghostwriter I’ve never had to edit." – Startup Coach</li>
     </ul>
 
-    <footer style="margin-top:4rem;font-size:0.9rem;color:#888;">
-        &copy; 2025 JorWrites. Built for stealth.
+    <footer>
+      &copy; 2025 JorWrites. All rights reserved.
     </footer>
+  </div>
 </body>
 </html>
