--- a/index.html
+++ b/index.html
@@ -9,20 +9,37 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f9f9f9;
+      background-color: #f4f4fc;
       color: #222;
+    }
+    header {
+      background: linear-gradient(to right, #1f2937, #4b5563);
+      color: white;
       padding: 2rem;
+      text-align: center;
+    }
+    header img {
+      width: 80px;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
     }
     .container {
-      max-width: 700px;
+      max-width: 720px;
       margin: auto;
       background: white;
       padding: 2rem;
       border-radius: 1rem;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      margin-top: -3rem;
+      position: relative;
+      z-index: 2;
     }
-    h1, h2, h3 {
-      color: #111;
+    h2 {
+      color: #1f2937;
     }
     a {
       color: #0066ee;
@@ -37,55 +54,63 @@
     footer {
       margin-top: 3rem;
       font-size: 0.9rem;
-      color: #999;
+      color: #666;
       text-align: center;
+      padding-bottom: 2rem;
     }
     .btn {
       display: inline-block;
       margin: 0.5rem 0;
       padding: 0.6rem 1.2rem;
-      background-color: #0066ee;
+      background-color: #1f2937;
       color: white;
       border-radius: 6px;
       text-decoration: none;
       font-weight: bold;
     }
     .btn:hover {
-      background-color: #004bbb;
+      background-color: #111827;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>JorWrites</h1>
-    <h2>🚀 LinkedIn Ghostwriting for Startup Founders</h2>
-    <p>High-converting content in your voice. 100% hands-off.</p>
 
-    <h3>💸 Pricing</h3>
-    <ul>
-      <li><strong>$200/month</strong> – 4 ghostwritten posts</li>
-      <li><strong>$400/month</strong> – 8 ghostwritten posts</li>
-    </ul>
+<header>
+  <img src="https://via.placeholder.com/80x80.png?text=J" alt="JorWrites Logo" />
+  <h1>JorWrites</h1>
+  <p>Ghostwriting that sounds like you. Converts like crazy.</p>
+</header>
 
-    <h3>📅 Book a Discovery Call</h3>
-    <a class="btn" href="https://calendly.com/jor123" target="_blank">Schedule on Calendly</a>
+<div class="container">
+  <h2>🚀 Services</h2>
+  <p>Done-for-you LinkedIn content designed to grow your brand and close high-ticket deals.</p>
 
-    <h3>💳 Ready to Start?</h3>
-    <a class="btn" href="https://paypal.me/jordanmcginnis899" target="_blank">Make Payment</a>
+  <h3>💸 Pricing</h3>
+  <ul>
+    <li><strong>$200/month</strong> – 4 ghostwritten posts</li>
+    <li><strong>$400/month</strong> – 8 ghostwritten posts</li>
+  </ul>
 
-    <h3>📥 Client Intake Form</h3>
-    <a class="btn" href="https://tally.so/r/wgZoLm" target="_blank">Fill Out Now</a>
+  <h3>📅 Book a Discovery Call</h3>
+  <a class="btn" href="https://calendly.com/jor123" target="_blank">Schedule on Calendly</a>
 
-    <h3>💬 Testimonials</h3>
-    <ul>
-      <li>"Saved me 6 hours a week. My posts finally sound like me again." – SaaS Founder</li>
-      <li>"Closed a $4K client off a single post." – AI Consultant</li>
-      <li>"Only ghostwriter I’ve never had to edit." – Startup Coach</li>
-    </ul>
+  <h3>💳 Ready to Start?</h3>
+  <a class="btn" href="https://paypal.me/jordanmcginnis899" target="_blank">Make Payment</a>
 
-    <footer>
-      &copy; 2025 JorWrites. All rights reserved.
-    </footer>
-  </div>
+  <h3>📥 Client Intake Form</h3>
+  <a class="btn" href="https://tally.so/r/wgZoLm" target="_blank">Fill Out Now</a>
+
+  <h3>💬 Testimonials</h3>
+  <ul>
+    <li>"Saved me 6 hours a week. My posts finally sound like me again." – SaaS Founder</li>
+    <li>"Closed a $4K client off a single post." – AI Consultant</li>
+    <li>"Only ghostwriter I’ve never had to edit." – Startup Coach</li>
+  </ul>
+</div>
+
+<footer>
+  &copy; 2025 JorWrites. Crafted with precision.
+</footer>
+
 </body>
 </html>
