--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       color: #222;
     }
     header {
-      background: linear-gradient(to right, #1f2937, #4b5563);
+      background: linear-gradient(to right, #111, #444);
       color: white;
       padding: 2rem;
       text-align: center;
     }
     header img {
-      width: 80px;
-      border-radius: 50%;
+      width: 100px;
+      border-radius: 12px;
       margin-bottom: 1rem;
     }
     header h1 {
@@ -42,7 +42,7 @@
       color: #1f2937;
     }
     a {
-      color: #0066ee;
+      color: #d4af37;
       text-decoration: none;
     }
     a:hover {
@@ -62,21 +62,21 @@
       display: inline-block;
       margin: 0.5rem 0;
       padding: 0.6rem 1.2rem;
-      background-color: #1f2937;
-      color: white;
+      background-color: #d4af37;
+      color: black;
       border-radius: 6px;
       text-decoration: none;
       font-weight: bold;
     }
     .btn:hover {
-      background-color: #111827;
+      background-color: #b8962f;
     }
   </style>
 </head>
 <body>
 
 <header>
-  <img src="https://via.placeholder.com/80x80.png?text=J" alt="JorWrites Logo" />
+  <img src="logo.png" alt="JorWrites Logo" />
   <h1>JorWrites</h1>
   <p>Ghostwriting that sounds like you. Converts like crazy.</p>
 </header>
@@ -109,7 +109,7 @@
 </div>
 
 <footer>
-  &copy; 2025 JorWrites. Crafted with precision.
+  &copy; 2025 JorWrites. Precision-built personal branding.
 </footer>
 
 </body>
