--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" href="logo.png" type="image/png" />
+  <style>
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .fade-in {
+      animation: fadeIn 1s ease-in-out;
+    }
+  </style>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JorWrites – LinkedIn Ghostwriting</title>
@@ -81,7 +92,7 @@
   <p>Ghostwriting that sounds like you. Converts like crazy.</p>
 </header>
 
-<div class="container">
+<div class="container fade-in">
   <h2>🚀 Services</h2>
   <p>Done-for-you LinkedIn content designed to grow your brand and close high-ticket deals.</p>
 
