--- a/offer.html
+++ b/offer.html
@@ -2,20 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>JorWrites Secret Offer</title>
-  <script async src="https://cdn.splitbee.io/sb.js"></script>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>JorWrites Starter Pack</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
-  <header><h1>🚨 Special Offer – Ghostwriting Pack</h1></header>
-  <main>
-    <ul>
-      <li>✅ 4 viral-style posts</li>
-      <li>✅ 48-hour turnaround</li>
-      <li>✅ No edits needed</li>
-    </ul>
-    <a class="btn" href="https://paypal.me/jordanmcginnis899/97" target="_blank">Grab It Now ($97)</a>
-  </main>
+<body style="font-family:sans-serif; background:#111; color:#fff; text-align:center; padding:2rem;">
+  <h1>JorWrites Starter Pack</h1>
+  <p>Everything you need to sound like a thought leader and close clients — without writing a word.</p>
+  
+<!-- LemonSqueezy Embed -->
+<script src="https://app.lemonsqueezy.com/embed.js" defer></script>
+<a href="https://jorwrites.lemonsqueezy.com/buy/3fe29184-8e73-4e96-bb78-49196d0226ad" class="lemonsqueezy-button" style="display:inline-block;padding:1rem 2rem;background:#D4AF37;color:#000;text-decoration:none;border-radius:8px;font-weight:bold;font-size:1.2rem;margin-top:20px;">Buy Now – $97</a>
+
 </body>
 </html>
