--- a/thankyou.html
+++ b/thankyou.html
@@ -9,7 +9,7 @@
     .modal {
       position: fixed; top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0,0,0,0.8);
+      background: rgba(0,0,0,0.85);
       display: flex; justify-content: center; align-items: center;
       color: white; text-align: center;
     }
@@ -19,12 +19,13 @@
       max-width: 420px;
     }
     .btn {
-      margin-top: 1.5rem;
+      margin: 1rem auto;
       background: #D4AF37;
       color: #000;
       padding: 0.75rem 1.5rem;
       text-decoration: none;
       border-radius: 8px;
+      display: inline-block;
       font-weight: bold;
     }
   </style>
@@ -33,9 +34,10 @@
   <div class="modal">
     <div class="modal-content">
       <h2>✅ You're In!</h2>
-      <p>Your Starter Pack is ready for download.</p>
-      <a class="btn" href="JorWrites_Starter_Pack.zip" download>📦 Download Now</a><br>
-      <a class="btn" href="https://calendly.com/jor123" target="_blank">📅 Book Strategy Call</a>
+      <p>Your Starter Pack is ready.</p>
+      <a class="btn" href="JorWrites_Starter_Pack.zip" download>📦 Download Pack</a><br>
+      <a class="btn" href="https://calendly.com/jor123" target="_blank">📅 Book a Call</a><br>
+      <a class="btn" href="upgrade.html">🔓 Unlock Premium</a>
     </div>
   </div>
 </body>
