--- a/upgrade.html
+++ b/upgrade.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background:#111; color:#fff; font-family:sans-serif; text-align:center; padding:2rem;">
   <h1>🚀 Upgrade to Premium</h1>
-  <p>Unlock custom content, client vault access, and 1:1 strategy support.</p>
-  <a href="https://jorwrites.lemonsqueezy.com/buy/your-upsell-product-id" class="lemonsqueezy-button" style="padding:1rem 2rem;background:#D4AF37;color:#000;text-decoration:none;border-radius:8px;font-weight:bold;font-size:1.2rem;margin-top:20px;">Upgrade Now – $297</a>
+  <p>Unlock 1:1 ghostwriting, vault access, and done-for-you strategy sessions.</p>
+  <a href="https://jorwrites.lemonsqueezy.com/buy/3fe29184-8e73-4e96-bb78-49196d0226ad" class="lemonsqueezy-button" style="padding:1rem 2rem;background:#D4AF37;color:#000;text-decoration:none;border-radius:8px;font-weight:bold;font-size:1.2rem;margin-top:20px;">Upgrade Now – $297</a>
 </body>
 </html>
