--- a/vault.html
+++ b/vault.html
@@ -2,20 +2,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>JorWrites Vault</title>
-  <script async src="https://cdn.splitbee.io/sb.js"></script>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Vault – JorWrites</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script>
+    function checkPassword() {
+      const code = prompt("Enter access code:");
+      if (code === "ghost97") {
+        document.getElementById('vault-content').style.display = 'block';
+        document.getElementById('lock-screen').style.display = 'none';
+      } else {
+        alert("Access denied.");
+      }
+    }
+    window.onload = checkPassword;
+  </script>
 </head>
-<body>
-  <header><h1>🔒 Affiliate Vault</h1></header>
-  <main>
-    <p>Access exclusive affiliate templates and bonuses below:</p>
-    <ul>
-      <li><a href="#">📝 Cold DM Template</a></li>
-      <li><a href="#">🧠 LinkedIn Swipe File</a></li>
-      <li><a href="#">🎯 Content Strategy Map</a></li>
-    </ul>
-  </main>
+<body style="background:#000; color:#fff; font-family:sans-serif; text-align:center; padding:2rem;">
+  <div id="lock-screen">
+    <p>🔒 Protected Vault</p>
+  </div>
+  <div id="vault-content" style="display:none;">
+    <h1>🧠 JorWrites Vault</h1>
+    <p>Swipe files, internal notes, and elite content drops.</p>
+    <a href="JorWrites_Starter_Pack.zip" download style="color:#D4AF37;">📥 Download again</a>
+  </div>
 </body>
 </html>
