--- a/clients.html
+++ b/clients.html
@@ -2,16 +2,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>JorWrites Client Portal</title>
-  <script async src="https://cdn.splitbee.io/sb.js"></script>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JorWrites Client Intake</title>
+    <style>
+        body {
+            background-color: #000;
+            color: #FFD700;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        header {
+            padding: 2rem;
+            font-size: 2rem;
+            font-weight: bold;
+        }
+        .form-container {
+            width: 100%;
+            max-width: 900px;
+            height: 100vh;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-  <header><h1>👤 Client Portal</h1></header>
-  <main>
-    <p>Welcome back. Drop your content intake, approvals, or feedback here.</p>
-    <iframe src="https://tally.so/r/wgZoLm" width="100%" height="500" frameborder="0"></iframe>
-  </main>
+    <header>JorWrites Client Intake</header>
+    <div class="form-container">
+        <iframe src="https://tally.so/r/3x5gPE"></iframe>
+    </div>
 </body>
 </html>
