--- a/vault.html
+++ b/vault.html
@@ -2,30 +2,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Vault – JorWrites</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script>
-    function checkPassword() {
-      const code = prompt("Enter access code:");
-      if (code === "ghost97") {
-        document.getElementById('vault-content').style.display = 'block';
-        document.getElementById('lock-screen').style.display = 'none';
-      } else {
-        alert("Access denied.");
-      }
+  <meta charset="UTF-8" />
+  <title>JorWrites Vault CMS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      margin: 0;
+      padding: 2rem;
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #f5f5f5;
     }
-    window.onload = checkPassword;
-  </script>
+    h1 {
+      color: gold;
+      text-align: center;
+    }
+    .vault-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
+      padding: 2rem 0;
+    }
+    .vault-card {
+      background: #222;
+      border: 1px solid #333;
+      padding: 1.5rem;
+      border-radius: 1rem;
+      text-align: center;
+      transition: all 0.3s ease;
+    }
+    .vault-card:hover {
+      transform: scale(1.02);
+      background: #1a1a1a;
+    }
+    .vault-card h3 {
+      color: #FFD700;
+    }
+    .vault-card a {
+      color: #FFD700;
+      text-decoration: none;
+    }
+  </style>
 </head>
-<body style="background:#000; color:#fff; font-family:sans-serif; text-align:center; padding:2rem;">
-  <div id="lock-screen">
-    <p>🔒 Protected Vault</p>
-  </div>
-  <div id="vault-content" style="display:none;">
-    <h1>🧠 JorWrites Vault</h1>
-    <p>Swipe files, internal notes, and elite content drops.</p>
-    <a href="JorWrites_Starter_Pack.zip" download style="color:#D4AF37;">📥 Download again</a>
+<body>
+  <h1>🧠 JorWrites Vault CMS</h1>
+  <div class="vault-grid">
+    <div class="vault-card">
+      <h3>📝 Swipe Files</h3>
+      <p>Headline hooks, cold emails, bio templates</p>
+      <a href="#">Access Now</a>
+    </div>
+    <div class="vault-card">
+      <h3>🎁 Bonus Content</h3>
+      <p>PDFs, mini-courses, and tools</p>
+      <a href="#">Download</a>
+    </div>
+    <div class="vault-card">
+      <h3>🔗 Affiliate Tools</h3>
+      <p>Gear, hosting, writing platforms</p>
+      <a href="#">Explore</a>
+    </div>
+    <div class="vault-card">
+      <h3>🧩 Dropzones</h3>
+      <p>Hidden resources & updates</p>
+      <a href="#">Unlock</a>
+    </div>
   </div>
 </body>
 </html>
