--- a/vault.html
+++ b/vault.html
@@ -1,123 +1,33 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>JorWrites Vault CMS (Protected)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Hidden Vault</title>
   <style>
     body {
-      margin: 0;
-      padding: 2rem;
-      font-family: Arial, sans-serif;
-      background: #111;
-      color: #f5f5f5;
+      background: black;
+      color: gold;
+      font-family: sans-serif;
+      text-align: center;
+      padding: 3rem 1rem;
     }
     h1 {
-      color: gold;
-      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 1rem;
     }
-    .vault-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-      padding: 2rem 0;
-    }
-    .vault-card {
-      background: #222;
-      border: 1px solid #333;
-      padding: 1.5rem;
-      border-radius: 1rem;
-      text-align: center;
-      transition: all 0.3s ease;
-    }
-    .vault-card:hover {
-      transform: scale(1.02);
-      background: #1a1a1a;
-    }
-    .vault-card h3 {
-      color: #FFD700;
-    }
-    .vault-card a {
-      color: #FFD700;
-      text-decoration: none;
-    }
-    .password-gate {
-      max-width: 400px;
-      margin: 5rem auto;
-      text-align: center;
-    }
-    .hidden { display: none; }
-    input[type="password"] {
-      padding: 0.5rem;
+    p {
       font-size: 1rem;
-      width: 100%;
-      margin-top: 1rem;
     }
-    button {
-      padding: 0.5rem 1rem;
-      margin-top: 1rem;
-      background: #FFD700;
-      border: none;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    iframe {
-      width: 100%;
-      height: 100px;
-      border: none;
-      margin-top: 2rem;
+    .stealth {
+      opacity: 0.8;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
-  <div class="password-gate" id="gate">
-    <h1>🔐 Enter Vault Password</h1>
-    <input type="password" id="password" placeholder="Enter password..." />
-    <button onclick="checkPassword()">Unlock</button>
-    <p id="error" style="color:red; display:none;">Incorrect password. Try again.</p>
-  </div>
-
-  <div class="vault hidden" id="vault">
-    <h1>🧠 JorWrites Vault CMS</h1>
-    <div class="vault-grid">
-      <div class="vault-card">
-        <h3>📝 Swipe Files</h3>
-        <p>Headline hooks, cold emails, bio templates</p>
-        <a href="https://www.notion.so/">Access Notion Vault</a>
-      </div>
-      <div class="vault-card">
-        <h3>🎁 Bonus Content</h3>
-        <p>PDFs, mini-courses, and tools</p>
-        <a href="https://drive.google.com/">Download from Google Drive</a>
-      </div>
-      <div class="vault-card">
-        <h3>🔗 Affiliate Tools</h3>
-        <p>Gear, hosting, writing platforms</p>
-        <a href="https://example.com/affiliate.pdf">Open PDF Guide</a>
-      </div>
-      <div class="vault-card">
-        <h3>🧩 Dropzones</h3>
-        <p>Hidden resources & updates</p>
-        <a href="https://jorwrites-site.vercel.app/dropzone.html">Unlock Drop</a>
-      </div>
-    </div>
-
-    <h2 style="text-align:center; margin-top:3rem;">📬 Join the Secret List</h2>
-    <iframe src="https://buttondown.email/join/joraudi123?as_embed=true"></iframe>
-  </div>
-
-  <script>
-    function checkPassword() {
-      const pass = document.getElementById("password").value;
-      const correct = "vault2025";
-      if (pass === correct) {
-        document.getElementById("gate").style.display = "none";
-        document.getElementById("vault").classList.remove("hidden");
-      } else {
-        document.getElementById("error").style.display = "block";
-      }
-    }
-  </script>
+  <h1>🔒 Hidden Vault Access</h1>
+  <p class="stealth">Only visionaries see the full map. This is Tier 1 access.</p>
+  <p>More doors await. Proceed wisely.</p>
 </body>
 </html>
