--- a/upsell.html
+++ b/upsell.html
@@ -1,1 +1,1 @@
-<html><head><title>Upsell</title></head><body><h1>🔥 Exclusive Offer</h1><p>This bonus expires soon. Act fast!</p></body></html>
+<html><body><h1>Exclusive Upgrade Offer</h1><a href='bonus.html'>Unlock Bonus Pack</a></body></html>
