--- a/vault.html
+++ b/vault.html
@@ -1,33 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hidden Vault</title>
-  <style>
-    body {
-      background: black;
-      color: gold;
-      font-family: sans-serif;
-      text-align: center;
-      padding: 3rem 1rem;
-    }
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-    p {
-      font-size: 1rem;
-    }
-    .stealth {
-      opacity: 0.8;
-      font-size: 0.9rem;
-    }
-  </style>
-</head>
-<body>
-  <h1>🔒 Hidden Vault Access</h1>
-  <p class="stealth">Only visionaries see the full map. This is Tier 1 access.</p>
-  <p>More doors await. Proceed wisely.</p>
-</body>
-</html>
+<html><body><h1>Vault CMS System</h1><p>Access Tiers: Bronze, Silver, Gold</p></body></html>
