--- a/bonus.html
+++ b/bonus.html
@@ -1,69 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dropzone Bonus Pack</title>
-  <style>
-    body {
-      background-color: #000;
-      color: #f5c518;
-      font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      padding: 2rem;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-    }
-
-    p {
-      font-size: 1rem;
-      opacity: 0.85;
-      margin-bottom: 2rem;
-    }
-
-    .download-btn {
-      background: #f5c518;
-      color: #000;
-      padding: 1rem 2rem;
-      border: none;
-      border-radius: 8px;
-      font-size: 1rem;
-      text-decoration: none;
-      font-weight: bold;
-      box-shadow: 0 0 10px #f5c51880;
-    }
-
-    .download-btn:hover {
-      background: #ffe564;
-    }
-
-    .footer {
-      margin-top: 3rem;
-      font-size: 0.85rem;
-      color: #666;
-    }
-  </style>
-</head>
-<body>
-  <h1>🎁 Dropzone Unlocked</h1>
-  <p>You’ve entered the hidden corridor. Below lies your Bonus Pack:</p>
-
-  <a class="download-btn" href="https://your-download-link.com" target="_blank">Download Templates & Files</a>
-
-  <div class="footer">
-    <p>Tier access: <strong>Gold</strong></p>
-    <p class="stealth">Your presence here is not by chance.</p>
-  </div>
-</body>
-</html>
+<html><body><h1>Bonus Pack</h1><a href='vault.html'>Enter Vault</a></body></html>
