--- a/delivery.html
+++ b/delivery.html
@@ -1,91 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Delivery Portal</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #000;
-      color: #f5f5f5;
-      font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      text-transform: uppercase;
-      color: #f5c518;
-    }
-
-    input[type="password"] {
-      padding: 0.75rem;
-      border: none;
-      border-radius: 5px;
-      font-size: 1rem;
-      margin-bottom: 1rem;
-    }
-
-    button {
-      background-color: #f5c518;
-      color: #000;
-      border: none;
-      padding: 0.75rem 1.5rem;
-      font-size: 1rem;
-      font-weight: bold;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .content {
-      display: none;
-      margin-top: 2rem;
-      animation: fadeIn 1.2s ease-in-out forwards;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.95); }
-      to { opacity: 1; transform: scale(1); }
-    }
-
-    .footer {
-      margin-top: 2rem;
-      font-size: 0.8rem;
-      color: #777;
-    }
-  </style>
-</head>
-<body>
-  <h1>🔐 Delivery Access</h1>
-  <p>Enter your password to unlock your asset drop.</p>
-
-  <input type="password" id="pw" placeholder="Enter access code" />
-  <button onclick="unlock()">Unlock</button>
-
-  <div class="content" id="drop">
-    <h2>🎯 Your Delivery is Ready</h2>
-    <p><a href="https://your-download-link.com" target="_blank" style="color: #f5c518; font-weight: bold;">Click here to download</a></p>
-  </div>
-
-  <div class="footer">JorWrites™ Delivery Access · Confidential</div>
-
-  <script>
-    function unlock() {
-      const input = document.getElementById("pw").value;
-      if (input === "vaultkey") {
-        document.getElementById("drop").style.display = "block";
-      } else {
-        alert("Invalid password.");
-      }
-    }
-  </script>
-</body>
-</html>
+<html><body><h1>Delivery Page (🔐 Password Required)</h1></body></html>
