--- a/thankyou.html
+++ b/thankyou.html
@@ -1,44 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Thank You – JorWrites</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    .modal {
-      position: fixed; top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.85);
-      display: flex; justify-content: center; align-items: center;
-      color: white; text-align: center;
-    }
-    .modal-content {
-      background: #111; padding: 2rem;
-      border-radius: 12px;
-      max-width: 420px;
-    }
-    .btn {
-      margin: 1rem auto;
-      background: #D4AF37;
-      color: #000;
-      padding: 0.75rem 1.5rem;
-      text-decoration: none;
-      border-radius: 8px;
-      display: inline-block;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
-  <div class="modal">
-    <div class="modal-content">
-      <h2>✅ You're In!</h2>
-      <p>Your Starter Pack is ready.</p>
-      <a class="btn" href="JorWrites_Starter_Pack.zip" download>📦 Download Pack</a><br>
-      <a class="btn" href="https://calendly.com/jor123" target="_blank">📅 Book a Call</a><br>
-      <a class="btn" href="upgrade.html">🔓 Unlock Premium</a>
-    </div>
-  </div>
-</body>
-</html>
+<html><body><h1>Thank You</h1><a href='delivery.html'>Access Delivery 🔓</a></body></html>
