--- a/bonus.html
+++ b/bonus.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bonus Vault</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bonus</title>
 </head>
 <body>
-  <h1>🎁 Your Bonus Pack</h1>
-  <p>Welcome to the bonus.html page! Here’s where your exclusive content drops.</p>
+    <h1>Bonus Page</h1>
+    <p>This is a placeholder for the Bonus content.</p>
 </body>
 </html>
