--- a/clients.html
+++ b/clients.html
@@ -1,42 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JorWrites Client Intake</title>
-    <style>
-        body {
-            background-color: #000;
-            color: #FFD700;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        header {
-            padding: 2rem;
-            font-size: 2rem;
-            font-weight: bold;
-        }
-        .form-container {
-            width: 100%;
-            max-width: 900px;
-            height: 100vh;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
+    <title>Clients</title>
 </head>
 <body>
-    <header>JorWrites Client Intake</header>
-    <div class="form-container">
-        <iframe src="https://tally.so/r/3x5gPE"></iframe>
-    </div>
+    <h1>Clients Page</h1>
+    <p>This is a placeholder for the Clients content.</p>
 </body>
 </html>
