--- a/drop.html
+++ b/drop.html
@@ -1,17 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>JorWrites Drop</title>
-  <script async src="https://cdn.splitbee.io/sb.js"></script>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Drop</title>
 </head>
 <body>
-  <header><h1>🎁 JorWrites Bonus Drop</h1></header>
-  <main>
-    <p>Here’s your exclusive download:</p>
-    <a class="btn" href="https://www.dropbox.com/scl/fi/sample_file.pdf" target="_blank">Download Now</a>
-  </main>
+    <h1>Drop Page</h1>
+    <p>This is a placeholder for the Drop content.</p>
 </body>
 </html>
