--- a/upgrade.html
+++ b/upgrade.html
@@ -1,15 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Upgrade – JorWrites Premium</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://app.lemonsqueezy.com/embed.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Upgrade</title>
 </head>
-<body style="background:#111; color:#fff; font-family:sans-serif; text-align:center; padding:2rem;">
-  <h1>🚀 Upgrade to Premium</h1>
-  <p>Unlock 1:1 ghostwriting, vault access, and done-for-you strategy sessions.</p>
-  <a href="https://jorwrites.lemonsqueezy.com/buy/3fe29184-8e73-4e96-bb78-49196d0226ad" class="lemonsqueezy-button" style="padding:1rem 2rem;background:#D4AF37;color:#000;text-decoration:none;border-radius:8px;font-weight:bold;font-size:1.2rem;margin-top:20px;">Upgrade Now – $297</a>
+<body>
+    <h1>Upgrade Page</h1>
+    <p>This is a placeholder for the Upgrade content.</p>
 </body>
 </html>
