--- a/upsell.html
+++ b/upsell.html
@@ -1,1 +1,12 @@
-<html><body><h1>Exclusive Upgrade Offer</h1><a href='bonus.html'>Unlock Bonus Pack</a></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Upsell</title>
+</head>
+<body>
+    <h1>Upsell Page</h1>
+    <p>This is a placeholder for the Upsell content.</p>
+</body>
+</html>
