--- a/vault.html
+++ b/vault.html
@@ -1,1 +1,12 @@
-<html><body><h1>Vault CMS System</h1><p>Access Tiers: Bronze, Silver, Gold</p></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vault</title>
+</head>
+<body>
+    <h1>Vault Page</h1>
+    <p>This is a placeholder for the Vault content.</p>
+</body>
+</html>
