--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JorWrites - Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index</title>
 </head>
 <body>
-  <h1>Welcome to JorWrites</h1>
-  <p>This is the index.html homepage for your live Vercel deployment.</p>
+    <h1>Index Page</h1>
+    <p>This is a placeholder for the Index content.</p>
 </body>
 </html>
