--- a/offer.html
+++ b/offer.html
@@ -1,17 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>JorWrites Starter Pack</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="manifest" href="manifest.json">
-  <script>navigator.serviceWorker?.register("service-worker.js")</script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Offer</title>
 </head>
-<body style="font-family:sans-serif; background:#111; color:#fff; text-align:center; padding:2rem;">
-  <h1>JorWrites Starter Pack</h1>
-  <p>Everything you need to sound like a thought leader and close clients — without writing a word.</p>
-  <script src="https://app.lemonsqueezy.com/embed.js" defer></script>
-  <a href="https://jorwrites.lemonsqueezy.com/buy/3fe29184-8e73-4e96-bb78-49196d0226ad" class="lemonsqueezy-button" style="display:inline-block;padding:1rem 2rem;background:#D4AF37;color:#000;text-decoration:none;border-radius:8px;font-weight:bold;font-size:1.2rem;margin-top:20px;">Buy Now – $97</a>
+<body>
+    <h1>Offer Page</h1>
+    <p>This is a placeholder for the Offer content.</p>
 </body>
 </html>
