--- a/signup.html
+++ b/signup.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Signup – JorWrites Starter Pack</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Signup</title>
 </head>
-<body style="background:#111; color:#fff; font-family:sans-serif; text-align:center; padding:2rem;">
-  <h1>🎯 Claim Your JorWrites Starter Pack</h1>
-  <p>Drop your name and email to get instant access + strategy call invite.</p>
-  <iframe src="https://tally.so/r/mOe9qx" width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0" title="Tally Form">Loading…</iframe>
+<body>
+    <h1>Signup Page</h1>
+    <p>This is a placeholder for the Signup content.</p>
 </body>
 </html>
