--- a/thankyou.html
+++ b/thankyou.html
@@ -1,1 +1,12 @@
-<html><body><h1>Thank You</h1><a href='delivery.html'>Access Delivery 🔓</a></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thankyou</title>
+</head>
+<body>
+    <h1>Thankyou Page</h1>
+    <p>This is a placeholder for the Thankyou content.</p>
+</body>
+</html>
