--- a/bonus.html
+++ b/bonus.html
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bonus</title>
-</head>
-<body>
-    <h1>Bonus Page</h1>
-    <p>This is a placeholder for the Bonus content.</p>
-</body>
-</html>
+<!-- bonus.html - Updated JorWrites system -->
+<html><head><title>bonus.html</title></head><body><h1>bonus.html</h1></body></html>
