--- a/clients.html
+++ b/clients.html
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clients</title>
-</head>
-<body>
-    <h1>Clients Page</h1>
-    <p>This is a placeholder for the Clients content.</p>
-</body>
-</html>
+<!-- clients.html - Updated JorWrites system -->
+<html><head><title>clients.html</title></head><body><h1>clients.html</h1></body></html>
