--- a/drop.html
+++ b/drop.html
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drop</title>
-</head>
-<body>
-    <h1>Drop Page</h1>
-    <p>This is a placeholder for the Drop content.</p>
-</body>
-</html>
+<!-- drop.html - Updated JorWrites system -->
+<html><head><title>drop.html</title></head><body><h1>drop.html</h1></body></html>
