--- a/signup.html
+++ b/signup.html
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup</title>
-</head>
-<body>
-    <h1>Signup Page</h1>
-    <p>This is a placeholder for the Signup content.</p>
-</body>
-</html>
+<!-- signup.html - Updated JorWrites system -->
+<html><head><title>signup.html</title></head><body><h1>signup.html</h1></body></html>
