--- a/upgrade.html
+++ b/upgrade.html
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upgrade</title>
-</head>
-<body>
-    <h1>Upgrade Page</h1>
-    <p>This is a placeholder for the Upgrade content.</p>
-</body>
-</html>
+<!-- upgrade.html - Updated JorWrites system -->
+<html><head><title>upgrade.html</title></head><body><h1>upgrade.html</h1></body></html>
