--- a/vault.html
+++ b/vault.html
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vault</title>
-</head>
-<body>
-    <h1>Vault Page</h1>
-    <p>This is a placeholder for the Vault content.</p>
-</body>
-</html>
+<!-- vault.html - Updated JorWrites system -->
+<html><head><title>vault.html</title></head><body><h1>vault.html</h1></body></html>
