--- a/delivery.html
+++ b/delivery.html
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delivery</title>
-</head>
-<body>
-    <h1>Delivery Page</h1>
-    <p>This is a placeholder for the Delivery content.</p>
-</body>
-</html>
+<!-- delivery.html - Updated JorWrites system -->
+<html><head><title>delivery.html</title></head><body><h1>delivery.html</h1></body></html>
