--- a/index.html
+++ b/index.html
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-</head>
-<body>
-    <h1>Index Page</h1>
-    <p>This is a placeholder for the Index content.</p>
-</body>
-</html>
+<!-- index.html - Updated JorWrites system -->
+<html><head><title>index.html</title></head><body><h1>index.html</h1></body></html>
