--- a/offer.html
+++ b/offer.html
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Offer</title>
-</head>
-<body>
-    <h1>Offer Page</h1>
-    <p>This is a placeholder for the Offer content.</p>
-</body>
-</html>
+<!-- offer.html - Updated JorWrites system -->
+<html><head><title>offer.html</title></head><body><h1>offer.html</h1></body></html>
