--- a/thankyou.html
+++ b/thankyou.html
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thankyou</title>
-</head>
-<body>
-    <h1>Thankyou Page</h1>
-    <p>This is a placeholder for the Thankyou content.</p>
-</body>
-</html>
+<!-- thankyou.html - Updated JorWrites system -->
+<html><head><title>thankyou.html</title></head><body><h1>thankyou.html</h1></body></html>
