--- a/upsell.html
+++ b/upsell.html
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upsell</title>
-</head>
-<body>
-    <h1>Upsell Page</h1>
-    <p>This is a placeholder for the Upsell content.</p>
-</body>
-</html>
+<!-- upsell.html - Updated JorWrites system -->
+<html><head><title>upsell.html</title></head><body><h1>upsell.html</h1></body></html>
