--- a/academy.html
+++ b/academy.html
@@ -1,2 +1,1 @@
-<!-- academy.html - Updated JorWrites system -->
-<html><head><title>academy.html</title></head><body><h1>academy.html</h1></body></html>
+<!-- academy.html placeholder -->
