--- a/bonus.html
+++ b/bonus.html
@@ -1,2 +1,1 @@
-<!-- bonus.html - Updated JorWrites system -->
-<html><head><title>bonus.html</title></head><body><h1>bonus.html</h1></body></html>
+<!-- bonus.html placeholder -->
