--- a/clients.html
+++ b/clients.html
@@ -1,2 +1,1 @@
-<!-- clients.html - Updated JorWrites system -->
-<html><head><title>clients.html</title></head><body><h1>clients.html</h1></body></html>
+<!-- clients.html placeholder -->
