--- a/thankyou.html
+++ b/thankyou.html
@@ -1,2 +1,1 @@
-<!-- thankyou.html - Updated JorWrites system -->
-<html><head><title>thankyou.html</title></head><body><h1>thankyou.html</h1></body></html>
+<!-- thankyou.html placeholder -->
