--- a/vault.html
+++ b/vault.html
@@ -1,2 +1,1 @@
-<!-- vault.html - Updated JorWrites system -->
-<html><head><title>vault.html</title></head><body><h1>vault.html</h1></body></html>
+<!-- vault.html placeholder -->
