--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<!-- index.html - Updated JorWrites system -->
-<html><head><title>index.html</title></head><body><h1>index.html</h1></body></html>
+<!-- index.html placeholder -->
