--- a/upsell.html
+++ b/upsell.html
@@ -1,2 +1,1 @@
-<!-- upsell.html - Updated JorWrites system -->
-<html><head><title>upsell.html</title></head><body><h1>upsell.html</h1></body></html>
+<!-- upsell.html placeholder -->
