--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<!-- index.html placeholder -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>JorWrites – Ghostwriting Tools</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      background: #0c0c0c;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+    p {
+      font-size: 1.1rem;
+      max-width: 600px;
+      margin-bottom: 2rem;
+    }
+    a.button {
+      display: inline-block;
+      padding: 12px 24px;
+      margin: 10px;
+      border-radius: 8px;
+      background-color: #8247e5;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    a.button:hover {
+      background-color: #5e2ebf;
+    }
+  </style>
+</head>
+<body>
+  <h1>JorWrites</h1>
+  <p>Your stealth ghostwriting toolkit is ready to deploy. Start below.</p>
+  <a href="https://calendly.com/jor123" class="button" target="_blank">Book a Call</a>
+  <a href="https://tally.so/r/wM8x2a" class="button" target="_blank">Client Intake</a>
+  <a href="https://your-lemon-squeezy-product-link.com" class="button" target="_blank">Access Product</a>
+</body>
+</html>
