--- a/clients.html
+++ b/clients.html
@@ -1,1 +1,46 @@
-<!-- clients.html placeholder -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Client Intake – JorWrites</title>
+  <style>
+    body {
+      background-color: #0b0b0b;
+      color: white;
+      font-family: sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2.2rem;
+      margin-bottom: 1rem;
+    }
+    iframe {
+      width: 100%;
+      max-width: 800px;
+      height: 600px;
+      border: none;
+      border-radius: 8px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+    }
+    a.fallback {
+      color: #ffc107;
+      margin-top: 1rem;
+      display: inline-block;
+    }
+  </style>
+</head>
+<body>
+  <h1>Apply to Work with JorWrites</h1>
+  <iframe src="https://tally.so/r/3x5gPE" loading="lazy"></iframe>
+  <a class="fallback" href="https://tally.so/r/3x5gPE" target="_blank">Open form in new tab</a>
+</body>
+</html>
