--- a/waitlist.html
+++ b/waitlist.html
@@ -1,2 +1,57 @@
-<!-- waitlist.html - Updated JorWrites system -->
-<html><head><title>waitlist.html</title></head><body><h1>waitlist.html</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Waitlist Access</title>
+  <link rel="stylesheet" href="https://unpkg.com/modern-css-reset/dist/reset.min.css" />
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #0d0d0d;
+      color: #e4e4e4;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+      padding: 1rem;
+    }
+    h1 {
+      font-size: 2.2rem;
+      margin-bottom: 0.5rem;
+    }
+    p {
+      font-size: 1rem;
+      max-width: 500px;
+      margin-bottom: 2rem;
+      color: #bcbcbc;
+    }
+    iframe {
+      width: 100%;
+      max-width: 500px;
+      height: 600px;
+      border: none;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
+    }
+    .stealth-animation {
+      margin-top: 2rem;
+      opacity: 0.8;
+    }
+  </style>
+</head>
+<body>
+  <h1>🚀 You're Almost In</h1>
+  <p>Enter the inner circle. Join the waitlist below to unlock the full JorWrites experience and rise through the ranks.</p>
+  <iframe src="https://tally.so/r/3x5gPE" title="Waitlist Form"></iframe>
+  <div class="stealth-animation">
+    <audio autoplay>
+      <source src="stealth-sound.mp3" type="audio/mpeg">
+    </audio>
+    <p>🔒 Secret portal activated...</p>
+  </div>
+</body>
+</html>
