--- a/academy.html
+++ b/academy.html
@@ -1,1 +1,1 @@
-<!-- academy.html placeholder -->
+<!DOCTYPE html><html><head><title>Academy</title></head><body><h1>Academy Modules</h1></body></html>
