--- a/upsell.html
+++ b/upsell.html
@@ -1,1 +1,1 @@
-<!-- upsell.html placeholder -->
+<!DOCTYPE html><html><head><title>Upsell</title></head><body><h1>Exclusive Upgrade</h1></body></html>
