--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html><html><head><title>JorWrites</title></head><body><h1>Welcome to JorWrites</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>JorWrites Ghost Studio</title>
+</head>
+<body>
+  <h1>Welcome to JorWrites Ghost Studio</h1>
+  <p>This is your clean landing page. Add more content and pages as needed.</p>
+</body>
+</html>
