--- a/academy.html
+++ b/academy.html
@@ -1,12 +1,1 @@
-
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Academy Modules</title>
-</head>
-<body>
-    <h1>Academy Modules</h1>
-    <h2>Platinum Lesson Embedded</h2>
-    <iframe src="platinum_lesson1.html" width="100%" height="600px" style="border:none;"></iframe>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Academy</title></head><body><h1>Academy Page</h1></body></html>
