--- a/academy.html
+++ b/academy.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Academy</title></head><body><h1>Academy Page</h1></body></html>
+<!DOCTYPE html><html><head><title>Academy</title></head><body><h1>Academy Page</h1><p>Learn and grow with stealth tactics.</p></body></html>
