--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>JorWrites</title></head><body><h1>Welcome to JorWrites</h1><p>Homepage works!</p></body></html>
+<!DOCTYPE html><html><head><title>JorWrites</title></head><body><h1>Welcome to JorWrites</h1><p>This is the stealth homepage.</p></body></html>
