--- a/thankyou.html
+++ b/thankyou.html
@@ -1,1 +1,1 @@
-<!-- thankyou.html placeholder -->
+<!DOCTYPE html><html><head><title>Thank You</title></head><body><h1>Thank You</h1><p>Your download is ready.</p></body></html>
