--- a/vault.html
+++ b/vault.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Vault</title></head><body><h1>Vault Page</h1></body></html>
+<!DOCTYPE html><html><head><title>Vault</title></head><body><h1>Vault Page</h1><p>Access restricted content here.</p></body></html>
